--- a/dotnetbackend-main/MobyLabWebProgramming.Core/MobyLabWebProgramming.Core.csproj
+++ b/dotnetbackend-main/MobyLabWebProgramming.Core/MobyLabWebProgramming.Core.csproj
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Entities\Feedback.cs">
+      <CopyToOutputDirectory></CopyToOutputDirectory>
+    </Compile>
     <Compile Update="Entities\Facturi.cs">
       <CopyToOutputDirectory></CopyToOutputDirectory>
     </Compile>
